add time information to plot

--- a/Notebooks/3D_plot.ipynb
+++ b/Notebooks/3D_plot.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 211,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import ipyvolume as ipv\n",
@@ -13,29 +15,28 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
-    "steps = 1000\n",
-    "cmap = plt.cm.viridis\n",
-    "cmap_r = plt.cm.viridis_r\n",
-    "color_om = cmap_r(np.linspace(1, 0, steps))\n",
-    "viridis_hex = list(map(lambda x: mpl.colors.rgb2hex(x), color_om))\n",
+    "colormap = matplotlib.cm.viridis\n",
     "\n",
     "def time2color(ts):\n",
     "    tmin = np.min(ts[ts>0])\n",
-    "    tmax = np.max(ts)\n",
+    "    delta_t = np.max(ts) - tmin\n",
     "    c = []\n",
     "    for t in ts:\n",
-    "        if t == 0.:\n",
-    "            c.append('#ffffff')\n",
-    "        else:\n",
-    "            index = int((t - tmin) / tmax * steps)\n",
-    "            c.append(viridis_hex[index-1])\n",
-    "    return c"
+    "        if t>0:\n",
+    "            c.append(colormap((t-tmin)/delta_t))\n",
+    "    return np.array(c)\n",
+    "\n",
+    "def normalize(arr, on_max=3.):\n",
+    "    amax = np.max(arr[arr>0])\n",
+    "    return [0.6+on_max*x/amax for x in arr if x>0.]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 212,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "idata = h5py.File('../data/File_981.h5')"
@@ -43,22 +44,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [],
    "source": [
-    "key = 'IC_ATWD_0_05_pct_charge_quantile'\n",
-    "ev_number = 1\n",
+    "key = 'IC_ATWD_0_5_pct_charge_quantile'\n",
+    "ckey = 'IC_charge'\n",
+    "ev_number = 5\n",
     "if key in idata.keys():\n",
     "    plt_data = idata[key][ev_number]\n",
+    "    charge = idata[ckey][ev_number] \n",
     "else:\n",
     "    print(idata.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 352,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ishape = np.shape(plt_data)\n",
@@ -67,29 +72,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [],
    "source": [
     "x_ic = np.hstack(np.hstack(xi))\n",
     "y_ic = np.hstack(np.hstack(yi))\n",
     "z_ic = np.hstack(np.hstack(zi))\n",
-    "s_ic = np.concatenate(np.array([plt_data[int(x_ic[i])][int(y_ic[i])][int(z_ic[i])] for i in range(len(x_ic)-1) ]))\n",
-    "c_ic = time2color(s_ic)"
+    "c_arr = np.concatenate([charge[int(x_ic[i])][int(y_ic[i])][int(z_ic[i])] for i in range(len(x_ic))])\n",
+    "mask = c_arr > 0\n",
+    "s_ic = normalize(c_arr)\n",
+    "c_ic = time2color([plt_data[int(x_ic[i])][int(y_ic[i])][int(z_ic[i])][0] for i in range(len(x_ic))])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 354,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Event Type 5.0\n"
+     ]
+    }
+   ],
    "source": [
-    "s_ic[s_ic>0.] =1."
+    "print('Event Type {}'.format(idata['reco_vals'][ev_number]['ClassificationLabel']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 355,
    "metadata": {
     "scrolled": true
    },
@@ -97,7 +112,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "02425ebd9fd84562952e52d7d30e5984",
+       "model_id": "98818fa5997c422188377620eea50775",
        "version_major": 2,
        "version_minor": 0
       },
@@ -110,8 +125,9 @@
     }
    ],
    "source": [
+    "ipv.clear()\n",
     "ipv.scatter(x_ic, y_ic, z_ic, size=0.2, alpha = 0.2, marker=\"sphere\", color = 'grey')\n",
-    "ipv.scatter(x_ic, y_ic, z_ic, size=s_ic, marker=\"sphere\", color='blue')#c_ic)\n",
+    "ipv.scatter(x_ic[mask], y_ic[mask], z_ic[mask], size=s_ic, marker=\"sphere\", color= c_ic)\n",
     "ipv.show()"
    ]
   },
