PEP 8 in apply model, generalize apply model env

--- a/notebooks/3D_plot.ipynb
+++ b/notebooks/3D_plot.ipynb
@@ -40,26 +40,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1502"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(idata['reco_vals']['hitDOMs'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1025  733 1346 1170  241  276  547   39  512  691  828  808  450  834 1068\n",
-      " 1062 1446  715 1455    4  206 1213 1261  165 1361  415  495 1360  307  117]\n"
+      "[ 105  740 1335  388   25  668  566 1193  405  208 1023  279  524  510 1134\n",
+      "   96 1188   79  525 1124]\n"
      ]
     }
    ],
    "source": [
     "idata = h5py.File('../data/File_981.h5')\n",
-    "print np.argsort(idata['reco_vals']['hitDOMs'])[-30:]"
+    "print np.argsort(idata['reco_vals']['hitDOMs'])[740:760]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
@@ -67,7 +87,7 @@
    "source": [
     "key = 'IC_time_first'\n",
     "ckey = 'IC_charge'\n",
-    "ev_number = 1360 #1360\n",
+    "ev_number = 96 #1360\n",
     "if key in idata.keys():\n",
     "    plt_data = idata[key][ev_number]\n",
     "    charge = idata[ckey][ev_number] \n",
@@ -77,15 +97,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6787.0\n",
-      "30149.0\n"
+      "6395.0\n",
+      "24083.0\n"
      ]
     }
    ],
@@ -96,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
@@ -108,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -120,12 +140,12 @@
     "c_arr = np.concatenate([charge[int(x_ic[i])][int(y_ic[i])][int(z_ic[i])] for i in range(len(x_ic))])\n",
     "s_ic = normalize(c_arr)\n",
     "c_col = time2color([1.*plt_data[int(x_ic[i])][int(y_ic[i])][int(z_ic[i])][0] for i in range(len(x_ic))],\n",
-    "                   tmin = 10000, tmax =15061)"
+    "                   tmin = 10000, tmax =12000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -133,8 +153,8 @@
      "output_type": "stream",
      "text": [
       "Event Type 2.0\n",
-      "Run ID 32233.0\n",
-      "Event ID 2384.0\n"
+      "Run ID 32536.0\n",
+      "Event ID 8690.0\n"
      ]
     }
    ],
@@ -146,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 56,
    "metadata": {
     "scrolled": false
    },
@@ -154,7 +174,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "87d41dc820744624a4178ca59c684384",
+       "model_id": "96e68ed32a3b4171b38fc87086c4bdde",
        "version_major": 2,
        "version_minor": 0
       },
