--- a/I3Module/README
+++ b/I3Module/README
@@ -14,14 +14,15 @@ The module requires an installation of icerec as well as a short list of python 
 
 Before the installation of the required packages copy all the files of the I3Module to a personal folder of your choice. Afterwards create a virtualenv based on your IceCube software version of choice. The following is an example installation (last tested on 2019-07-16):
 
-    1. source /cvmfs/icecube.opensciencegrid.org/py2-v3.0.1/RHEL_7_x86_64/metaprojects/icerec/V05-02-03/env-shell.sh
-    2. virtualenv -p /cvmfs/icecube.opensciencegrid.org/py2-v3.0.1/RHEL_7_x86_64/bin/python venv
-    3. source venv/bin/activate
-    4. pip install tensorflow numpy scipy configparser keras
-       (note that this only installs the cpu version of tensorflow, if you want to run a on a gpu use tensorflow-gpu)
-    5. change the PY_ENV variable in i3module.sh to the path of your virtualenv  
-    6. change the IC_ENV variable according with your installation
-    7. run the script as explaind below in 1.)
+    1. Load an IceCube Environment: eval $(/cvmfs/icecube.opensciencegrid.org/py2-v3.0.1/setup.sh)
+    2. Load a Metaproject: source /cvmfs/icecube.opensciencegrid.org/py2-v3.0.1/RHEL_7_x86_64/metaprojects/icerec/V05-02-04/env-shell.sh 
+    3. Create a Virtual Environment: virtualenv --no-site-package /path/to/my/venv
+    4. Load the Environment: source /path/to/my/venv/bin/activate
+    5. Install Packages: pip install --ignore-installed tensorflow==1.5.0 numpy scipy configparser keras
+       (note that this only installs the cpu version of tensorflow, if you want to run a on a gpu use tensorflow-gpu==1.14.0)
+    6. change the PY_ENV variable in i3module.sh to the path of your virtualenv  
+    7. change the IC_ENV and META_PROJECT variables in i3module.sh according with your installation
+    8. run the script as explaind below in 1.)
 
 Remark: In case you get the error `ImportError: No module named google.protobuf` just add an __init__.py to the google.protobuf installation in your
         site-packages by running: 
